--- a/app/templates/services/list_services.html
+++ b/app/templates/services/list_services.html
@@ -35,11 +35,28 @@
       {% for service in services %}
       <div class="col-md-6 col-lg-4">
         <div class="card service-card h-100 shadow-sm border-0">
-          <!-- Service Image -->
-          <div class="card-img-container">
-            <img src="{{ url_for('static', filename='uploads/' ~ service.image_url) }}" 
-                 class="card-img-top service-img" alt="{{ service.title }}">
-          </div>
+    <!-- Service Image -->
+    {% if service.image_url %}
+      {% if service.image_url.startswith('http') %}
+        <!-- Case 2: When a full URL (http:// or https://) is provided -->
+        <div class="card-img-container">
+          <img src="{{ service.image_url }}" class="card-img-top service-img" alt="{{ service.title }}">
+        </div>
+      {% else %}
+        <!-- Case 1: When an image is uploaded and the filename is stored in the database -->
+        <div class="card-img-container">
+          <img src="{{ url_for('static', filename='uploads/' ~ service.image_url) }}" 
+              class="card-img-top service-img" alt="{{ service.title }}">
+        </div>
+      {% endif %}
+    {% else %}
+      <!-- Case 3: When no image URL is provided (blank or null), show the default image -->
+      <div class="card-img-container">
+        <img src="{{ url_for('static', filename='uploads/default.jpg') }}" 
+            class="card-img-top service-img" alt="{{ service.title }}">
+      </div>
+    {% endif %}
+
 
           <!-- Card Body -->
           <div class="card-body d-flex flex-column">
